# SoftPosit

./: .gitignore  CMakeLists.txt  README.md
source/include/: softposit_types.h
